--- a/elika-warehouse/views/tmpl/administrator/admin.html
+++ b/elika-warehouse/views/tmpl/administrator/admin.html
@@ -66,51 +66,51 @@
 										<div class="modal-body">											
 											<div class="row form-group">
 												<div class="col-sm-6 col-md-6">
-													<label for="">First Name</label>
+													<label for="">First Name <span class="text-danger">*</span></label>
 													<input type="text" name="" id="" class="form-control" placeholder="">
 												</div>
 												<div class="col-sm-6 col-md-6">
-													<label for="">Last Name</label>
+													<label for="">Last Name <span class="text-danger">*</span></label>
 													<input type="text" name="" id="" class="form-control" placeholder="">
 												</div>
 											</div>
 											
 											<div class="form-group row">
 												<div class="col-sm-6 col-md-6">				
-													<label for="">Email Address</label>
+													<label for="">Email Address <span class="text-danger">*</span></label>
 													<input type="emial" name="" id="" class="form-control" placeholder="">
 												</div>
 												<div class="col-sm-6 col-md-6">				
-													<label for="">Phone</label>
+													<label for="">Phone <span class="text-danger">*</span></label>
 													<input type="text" name="" id="" class="form-control" placeholder="">
 												</div>
 											</div>
 											
 											<div class="form-group row">												
 												<div class="col-sm-6 col-md-6">
-													<label for="">Password</label>
+													<label for="">Password <span class="text-danger">*</span></label>
 													<input type="password" name="" id="" class="form-control" placeholder="">
 												</div>
 												<div class="col-sm-6 col-md-6">
-													<label for="">Confirm Password</label>
-													<input type="password" name="" id="" class="form-control" placeholder="">
-												</div>
-											</div>
-											
-											<div class="form-group row">												
-												<div class="col-sm-6 col-md-6">
-													<label for="">Admin Password</label>
-													<input type="password" name="" id="" class="form-control" placeholder="">
-												</div>
-												<div class="col-sm-6 col-md-6">
-													<label for="">Zip Code</label>
+													<label for="">Confirm Password <span class="text-danger">*</span></label>
 													<input type="password" name="" id="" class="form-control" placeholder="">
 												</div>
 											</div>
 											
 											<div class="form-group row">												
 												<div class="col-sm-6 col-md-6">
-													<label for="" style="display: block;">Select Admin</label>
+													<label for="">Admin Password <span class="text-danger">*</span></label>
+													<input type="password" name="" id="" class="form-control" placeholder="">
+												</div>
+												<div class="col-sm-6 col-md-6">
+													<label for="">Zip Code <span class="text-danger">*</span></label>
+													<input type="password" name="" id="" class="form-control" placeholder="">
+												</div>
+											</div>
+											
+											<div class="form-group row">												
+												<div class="col-sm-6 col-md-6">
+													<label for="" style="display: block;">Select Admin <span class="text-danger">*</span></label>
 													<select chosen="{width: '100%'}">
 														<option>Master Administrator</option>
 														<option>Senior Administrator</option>
