--- a/views/tmpl/admin/support/technician-profile.html
+++ b/views/tmpl/admin/support/technician-profile.html
@@ -62,67 +62,65 @@
 							</uib-tab>
 							<uib-tab heading="Edit Account">
 								<div class="wrap-reset">
-									<form name="form1" role="form">
+									<form ng-validate="validationOptions" ng-submit="submitTechProfile(addTechnician,techProfile)" name="techProfile" role="form">
 										<div class="modal-body">
 											<div class="form-group row">
 												<div class="col-sm-6 col-sm-6">
-													<label for="first-name">First Name</label>
-													<input type="text" class="form-control" ng-model="addTechnician.technician_first_name" id="first-name" value="Arnold">
+													<label for="first-name">First Name <span class="text-danger">*</span></label>
+													<input type="text" class="form-control" ng-model="addTechnician.technician_first_name" id="first-name" name="first_name" required="required">
 												</div>
 												<div class="col-sm-6 col-sm-6">
-													<label for="last-name">Last Name</label>
-													<input type="text" ng-model="addTechnician.technician_last_name" class="form-control" id="last-name" value="">
+													<label for="last-name">Last Name <span class="text-danger">*</span></label>
+													<input type="text" ng-model="addTechnician.technician_last_name" class="form-control" id="last-name" name="last_name" required="required">
 												</div>
 											</div>
 											<div class="form-group row">										
 												<div class="col-sm-6 col-sm-6">
-													<label for="email">Email Address</label>
-													<input type="email" ng-model="addTechnician.technician_email" class="form-control" id="email" value="pcosm1245@gmail.com" readonly>
+													<label for="email">Email Address <span class="text-danger">*</span></label>
+													<input type="email" ng-model="addTechnician.technician_email" class="form-control" id="email" value="pcosm1245@gmail.com" name="email" required="required" readonly>
 												</div>
 												<div class="col-sm-6 col-sm-6">
-													<label for="first-name">Phone Number</label>
-													<input type="text" ng-model="addTechnician.technician_phone" class="form-control" id="first-name" value="212 1467 1212">
+													<label for="first-name">Phone Number <span class="text-danger">*</span></label>
+													<input type="text" ng-model="addTechnician.technician_phone" class="form-control" id="first-name" pattern="^\+[1-9]{1}[0-9]{3,14}$" oninvalid="setCustomValidity('Please enter valid mobile number')" onchange="try{setCustomValidity('')}catch(e){}" required="required" name="phone_number">
 												</div>
 											</div>										
 											<div class="form-group row">												
 												<div class="col-sm-6 col-sm-6">
-													<label for="address1">Address</label>
-													<input type="text" class="form-control" id="address1" ng-model="addTechnician.technician_address" value="558 Margaret Street, LOS ANGELES, CA-90001, USA">
+													<label for="address1">Address <span class="text-danger">*</span></label>
+													<input type="text" class="form-control" id="address1" ng-model="addTechnician.technician_address" value="558 Margaret Street, LOS ANGELES, CA-90001, USA" name="address" required="required">
 												</div>
 												<div class="col-sm-6 col-sm-6">
-													<label for="address1">Zip Code</label>
-													<input type="text" class="form-control" id="address1" ng-model="addTechnician.technician_address" value="90001">
+													<label for="address1">Zip Code <span class="text-danger">*</span></label>
+													<input type="number" class="form-control" id="address1" ng-model="addTechnician.technician_zipcode" value="90001" required="required">
 												</div>
 											</div>
 											<div class="form-group row">
 												<div class="col-sm-6 col-md-6">
 													<div class="row">
 														<div class="col-sm-5 col-md-5 pr-0">
-															<label for="">Status</label><br/>
+															<label for="">Status <span class="text-danger">*</span></label><br/>
 															<div class="btn-group btnrounded">
 																<label class="btn btn-default" ng-model="addTechnician.technician_status" uib-btn-radio="1">Active</label>
 																<label class="btn btn-default" ng-model="addTechnician.technician_status" uib-btn-radio="0">Inactive</label>
 															</div>
 														</div>
-														<!-- <div class="col-sm-7 col-md-7" ng-hide="addTechnician.status==0">
-															<div ng-controller="DatepickerDemoCtrl">
-																<label for="">Expiration Date</label>
-																<div class="input-group">
-																	<input type="text" class="form-control" uib-datepicker-popup="{{format}}" ng-model="$parent.addTechnician.expiration_date" is-open="opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" />
-																	<span class="input-group-btn">
-																		<button type="button" class="btn btn-default" ng-click="open($event)" style="padding: 8px 14px;"><i class="glyphicon glyphicon-calendar"></i></button>
-																	</span>
-																</div>
-															</div>
-														</div> -->
 													</div>
 												</div>
+												<div class="col-sm-6 col-md-6">				
+												<label for="">Expiration Date <span class="text-danger">*</span></label>
+													<div class="input-group userexp" ng-controller="DatepickerDemoCtrl" >
+														<input type="text"  onkeypress="return false;"id="expirationdate" name="expirationdate"  class="form-control" uib-datepicker-popup="dd/MM/yyyy" is-open="opened" min-date="mindate" datepicker-options="dateOptions" ng-required="true" close-text="Close" ng-model="addTechnician.expiration_date"/>
+														<span class="input-group-btn">
+															<button type="button" class="btn btn-default" ng-click="open($event)" style="padding: 8px 14px;"><i class="glyphicon glyphicon-calendar"></i></button>
+														</span>
+													</div>
+											</div>
 											</div>
 											<div class="form-group row legend">
 												<div class="col-md-12">
 													<p></p>
-													<button class="btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a">Cancel</button>
-													<button class="btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a">Save</button>
+													<div onclick="window.history.back()" class="btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a">Cancel</div>
+													<button type="submit" class="btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a">Save</button>
 												</div>
 											</div>
 										</div>
