--- a/elika-warehouse/views/tmpl/administrator/add-roles.html
+++ b/elika-warehouse/views/tmpl/administrator/add-roles.html
@@ -66,11 +66,11 @@
 								<div class="modal-body p-0">											
 									<div class="row">
 										<div class="form-group col-sm-12 col-md-3">
-											<label for="">Roles Name</label>
+											<label for="">Roles Name <span class="text-danger">*</span></label>
 											<input type="text" name="" id="" class="form-control mb-10" ng-model="role.role_name" placeholder="" required="required">
 										</div>
 										<div class="form-group col-sm-12 col-md-2" ng-controller="ActivebtnCtrl">
-											<label for="">Status</label><br/>
+											<label for="">Status <span class="text-danger">*</span></label><br/>
 											<div class="btn-group btnrounded" >
 												<label class="btn btn-default" ng-model="role.status" uib-btn-radio="1">Active</label>
 												<label class="btn btn-default" ng-model="role.status" uib-btn-radio="0">Inactive</label>
