--- a/elika-warehouse/views/tmpl/firmware/firmware-management.html
+++ b/elika-warehouse/views/tmpl/firmware/firmware-management.html
@@ -62,19 +62,19 @@
 							<li class="addpopup">
 								<div ng-controller="ModalDemoCtrl">
 									<script type="text/ng-template" id="myModalContent.html">
-										<form name="form1" role="form" ng-submit="submitAddFirmware(addFirmware,file)">
+										<form name="form1" role="form" ng-validate ng-submit="submitAddFirmware(addFirmware,file,form1)">
 											<div class="modal-header"><h4 class="modal-title custom-font">Add Configuration Device</h4></div>
 											<div class="modal-body mt-5">
 												<div class="row">
 													<div class="form-group col-sm-6 col-md-6">
-														<label for="">Device Model</label><br/>
-														<select class="form-control" ng-model="addFirmware.device_model" ng-options="model for model in deviceModel" ng-change="deviceHardware(addFirmware.device_model)" required="required">
+														<label for="">Device Model <span class="text-danger">*</span></label><br/>
+														<select name="device_name" class="form-control" ng-model="addFirmware.device_model" ng-options="model for model in deviceModel" ng-change="deviceHardware(addFirmware.device_model)" required="required">
 															<option value="">Select</option>
 														</select>
 													</div>
 													<div class="form-group col-sm-6 col-md-6">
-														<label for="">Component</label><br/>
-														<select class="form-control" ng-model="addFirmware.component" required="required">
+														<label for="">Component <span class="text-danger">*</span></label><br/>
+														<select name="component" class="form-control" ng-model="addFirmware.component" required="required">
 															<option value="">Select</option>
 															<option>Main Board</option>
 															<option>Front Board</option>
@@ -85,21 +85,21 @@
 												</div>
 												<div class="row">
 													<div class="form-group col-sm-6 col-md-6">
-														<label for="">Hardware Version</label><br/>
-														<select class="form-control" ng-model="addFirmware.hardware_version" ng-options="version for version in hardwareVersions" required="required">
+														<label for="">Hardware Version <span class="text-danger">*</span></label><br/>
+														<select name="hardware" class="form-control" ng-model="addFirmware.hardware_version" ng-options="version for version in hardwareVersions" required="required">
 															<option value="">Select</option>
 														</select>
 													</div>
 													<div class="form-group col-sm-6 col-md-6">
-														<label for="">Firmware Version</label><br/>
-														<input class="form-control" type="text" ng-model="addFirmware.firmware_version" required="required">
+														<label for="">Firmware Version <span class="text-danger">*</span></label><br/>
+														<input name="firmware" class="form-control" type="text" ng-model="addFirmware.firmware_version" required="required">
 														
 													</div>
 												</div>
 												<div class="row">
 													
 													<div class="form-group col-sm-6 col-md-6">
-														<label for="">Upload Firmware</label>
+														<label for="">Upload Firmware <span class="text-danger">*</span></label>
 														<div class="profilephoto">
 															<input type="file" file-model="file" class="filestyle user-profilep" ui-options="{ buttonText: 'Find file', iconName: 'fa fa-inbox' }" id="profilep-2" tabindex="-1" required="required">
 															<div class="bootstrap-filestyle input-group"><input type="text" class="form-control " disabled=""> <span class="group-span-filestyle input-group-btn" tabindex="0"><label for="profilep-2" class="btn btn-default "><span class="glyphicon fa fa-inbox"></span> Find file</label></span></div>
@@ -108,8 +108,8 @@
 												</div>
 												<div class="row">
 													<div class="form-group col-sm-12 col-md-12">
-														<label for="">Description of the Firmware Upgrade</label><br/>
-														<textarea name="" id="" ng-model="addFirmware.description" class="form-control" placeholder="" required="required"></textarea>
+														<label for="">Description of the Firmware Upgrade <span class="text-danger">*</span></label><br/>
+														<textarea name="ddfs" id="" ng-model="addFirmware.description" class="form-control" placeholder="" required="required"></textarea>
 													</div>
 												</div>
 											</div>
