--- a/elika-warehouse/views/tmpl/inventory/devices.html
+++ b/elika-warehouse/views/tmpl/inventory/devices.html
@@ -60,44 +60,43 @@
 									<script type="text/ng-template" id="myModalContent.html">
 										<form name="add_device" role="form" ng-validate ng-submit="submitAddDevice(device,add_device)">
 											<div class="modal-header"><h4 class="modal-title custom-font">Add Configuration Device</h4></div>
-											
-											<div class="model-body mt-10"><p style="color:red;">&nbsp;&nbsp; {{errorMessage}}</p></div>
+											<!-- <div class="model-body mt-10"><p style="color:red;">&nbsp;&nbsp; {{errorMessage}}</p></div> -->
 											<div class="modal-body mt-5">
 												<div class="row">
 													<div class="form-group col-sm-6 col-md-6">
-														<label for="">Device Model</label><br/>
+														<label for="">Device Model <span class="text-danger">*</span></label><br/>
 														<select name="device_model" ng-model="device.device_model" class="form-control" ng-options="model for model in deviceModel" required>
 															<option value="">Select</option>
 														</select>
 													</div>
 													<div class="form-group col-sm-6 col-md-6">
-														<label for="">Account Number/ICCID</label>
-														<input type="text" name="" id="" ng-model="device.account_no" class="form-control" number maxlength="16" placeholder="" required>
+														<label for="">Account Number/ICCID <span class="text-danger">*</span></label>
+														<input type="text" name="account_no" id="" ng-model="device.account_no" class="form-control" number maxlength="16" placeholder="" required>
 													</div>
 												</div>
 												<div class="row">
 													<div class="form-group col-sm-6 col-md-6">
-														<label for="">Serial Number</label>
+														<label for="">Serial Number <span class="text-danger">*</span></label>
 														<input ng-model="device.serial_no" type="text" name="serial_no" id="" class="form-control" placeholder="" required>
 													</div>
 													<div class="form-group col-sm-6 col-md-6">
-														<label for="">Registration Code</label>
-														<input ng-model="device.reg_code" type="text" name="" id="" class="form-control" placeholder="" required>
+														<label for="">Registration Code <span class="text-danger">*</span></label>
+														<input ng-model="device.reg_code" type="text" name="registration" id="" class="form-control" placeholder="" required>
 													</div>
 												</div>
 												<div class="row">
 													<div class="form-group col-sm-6 col-md-6">
-														<label for="">Phone Number</label>
-														<input type="text" name="" id="" class="form-control" ng-model="device.phone_no" pattern="^\+[1-9]{1}[0-9]{3,14}$" oninvalid="setCustomValidity('Please enter valid mobile number')" onchange="try{setCustomValidity('')}catch(e){}" placeholder="+1 2015550123" required>
+														<label for="">Phone Number  <span class="text-danger">*</span><small>( +12015550123 )</small></label>
+														<input type="text" name="phone" id="" class="form-control" ng-model="device.phone_no" pattern="^\+[1-9]{1}[0-9]{3,14}$" oninvalid="setCustomValidity('Please enter valid mobile number')" onchange="try{setCustomValidity('')}catch(e){}"  required>
 													</div>
 													<div class="form-group col-sm-6 col-md-6">
-														<label for="">Bluetooth Mac Id</label>
-														<input type="text" name="" id="" class="form-control" ng-model="device.mac_address" pattern="^([0-9A-F]{2}[:-]){5}([0-9A-F]{2})$" oninvalid="setCustomValidity('Please enter valid mac address')" onchange="try{setCustomValidity('')}catch(e){}" placeholder="" required>
+														<label for="">Bluetooth Mac Id <span class="text-danger">*</span></label>
+														<input type="text" name="ble" id="" class="form-control" ng-model="device.mac_address" pattern="^([0-9A-F]{2}[:-]){5}([0-9A-F]{2})$" oninvalid="setCustomValidity('Please enter valid mac address')" onchange="try{setCustomValidity('')}catch(e){}" placeholder="" required>
 													</div>
 												</div>
 												<div class="row">
 													<div class="col-sm-12 col-md-12">
-														<label for="">Choose Options</label><br/>
+														<label for="">Choose Options </label><br/>
 														<div class="row" ng-init="value = 'off'">
 															<div class="form-group col-sm-12 col-md-3">
 																<label class="checkbox checkbox-custom-alt m-0">
