--- a/elika-warehouse/views/tmpl/inventory/view-device.html
+++ b/elika-warehouse/views/tmpl/inventory/view-device.html
@@ -90,7 +90,7 @@
 											<div class="modal-body mt-5">
 												<div class="row">
 													<div class="form-group col-sm-6 col-md-6">
-														<label for="">Hardware Version</label><br/>
+														<label for="">Hardware Version <span class="text-danger">*</span></label><br/>
 														<select class="form-control" ng-model="upgradeFirmware.hardware_version" required="required" ng-options="version for version in hardwareVersions" ng-change="firmwareVersionViewInventry(upgradeFirmware.hardware_version)">
 														<option value="">Select</option>
 														</select>
@@ -102,7 +102,7 @@
 														</select> -->
 													</div>
 													<div class="form-group col-sm-6 col-md-6">
-														<label for="">Firmware Version</label><br/>
+														<label for="">Firmware Version <span class="text-danger">*</span></label><br/>
 														<!-- <input type="text" class="form-control" ng-model="upgradeFirmware.firmware_version" required="required"> -->
 														<select class="form-control" type="text" ng-model="upgradeFirmware.firmware_version"
 														ng-options="x for x in listFirmware"
@@ -111,23 +111,7 @@
 														</select>
 													</div>
 												</div>
-												<!-- <div class="row">
-													<div class="form-group col-sm-6 col-md-6">
-														<label for="">Schedule Date</label>
-														<div class="input-group userexp" ng-controller="DatepickerDemoCtrl" >
-															<input type="text" class="form-control" uib-datepicker-popup="{{format}}" ng-model="dt" is-open="opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" />
-															<span class="input-group-btn">
-																<button type="button" class="btn btn-default" ng-click="open($event)" style="padding: 8px 14px;"><i class="glyphicon glyphicon-calendar"></i></button>
-															</span>
-														</div>
-													</div>
-													<div class="form-group col-sm-6 col-md-6">
-														<label for="">Schedule Time</label><br/>
-														<div ng-controller="TimepickerDemoCtrl">
-															<uib-timepicker ng-model="mytime" ng-change="changed()" hour-step="hstep" minute-step="mstep" show-meridian="ismeridian"></uib-timepicker>
-														</div>
-													</div>													
-												</div> -->	
+												
 											</div>
 											<div class="modal-footer">
 												<div class="btn btn-lightred btn-rounded btn-ef btn-ef-4 btn-ef-4c" ng-click="cancel()"><i class="fa fa-arrow-left" id="close"></i> Close</div>
