--- a/views/tmpl/admin/administrator/add-roles.html
+++ b/views/tmpl/admin/administrator/add-roles.html
@@ -35,7 +35,7 @@
 								<div class="modal-body p-0">											
 									<div class="row" ng-controller="ActivebtnCtrl">
 										<div class="form-group col-sm-12 col-md-4 col-lg-3">
-											<label for="">Roles Name</label>
+											<label for="">Roles Name <span class="text-danger">*</span></label>
 											<input type="text" name="" id="" ng-model="roleAdd.role_name" class="form-control" placeholder="" required>
 										</div>
 										<div class="form-group col-sm-12 col-md-4 col-md-2">
