--- a/views/tmpl/admin/device/dependent-devices.html
+++ b/views/tmpl/admin/device/dependent-devices.html
@@ -171,7 +171,7 @@
 							<div ng-class="class" ng-cloak>
 								<div class="glview">
 									<md-content>			
-										<md-card ng-repeat="device in dependentDevice | filter:text | filter:title | filter:facility | orderBy:myOrderBy">
+										<md-card ng-repeat="device in dependentDevice | filter:text | filter:title | filter:facility | orderBy:myOrderBy track by $index">
 											<a ui-sref="app.admin.device.view-dependent-device"><img ng-src="images/device/elika-76-bronze.png" class="md-card-image" alt="Washed Out"></a>
 											<md-card-content>
 												<h2 class="md-title">{{ device.device_name }}</h2>
