--- a/views/tmpl/admin/device/devices.html
+++ b/views/tmpl/admin/device/devices.html
@@ -36,24 +36,24 @@
 											<div class="modal-body mt-5">
 												<div class="row">
 													<div class="form-group col-sm-12 col-md-12">
-														<label for="">Device Name</label>
+														<label for="">Device Name <span class="text-danger">*</span></label>
 														<input type="text" maxlength="30" name="device_name" ng-model="device.device_name" id="" class="form-control" placeholder="" required autocomplete="off">
 													</div>
 													
 												</div>
 												<div class="row">
 													<div class="form-group col-sm-6 col-md-6">
-														<label for="">Serial Number</label>
+														<label for="">Serial Number <span class="text-danger">*</span></label>
 														<input type="text" maxlength="20" name="serial_no" id="" ng-model="device.serial_no" class="form-control" placeholder="" required>
 													</div>
 													<div class="form-group col-sm-6 col-md-6">
-														<label for="">Registration Code</label>
+														<label for="">Registration Code <span class="text-danger">*</span></label>
 														<input type="text" name="" id="" ng-model="device.registration_code" class="form-control" placeholder="" required>
 													</div>
 												</div>
 												<div class="row" >
 													<div class="form-group col-sm-6 col-md-6">
-														<label for="">Device Type</label><br/>
+														<label for="">Device Type <span class="text-danger">*</span></label><br/>
 														<div class="btn-group btnrounded" ng-init="device.device_type='master'">
 															<label class="btn btn-default" ng-model="device.device_type" uib-btn-radio="'master'">Primary</label>
 															<label class="btn btn-default" ng-model="device.device_type" uib-btn-radio="'slave'">Dependent</label>
@@ -69,13 +69,13 @@
 												
 												<div class="row">
 													<div class="form-group col-sm-6 col-md-6">
-														<label for="">Facility</label><br/>
+														<label for="">Facility <span class="text-danger">*</span></label><br/>
 														<select class="form-control" ng-model="device.facility_id" ng-change="getDoorsList()" ng-options="item.facility_id as item.facility_name for item in facilityList">
 															<option value="">Select</option>
 														</select>
 													</div>
 													<div class="form-group col-sm-6 col-md-6">
-														<label for="">Technician</label><br/>
+														<label for="">Technician <span class="text-danger">*</span></label><br/>
 														<select class="form-control" name="technician_id" ng-options="item.technician_id as item.technician_name for item in technicianList track by item.technician_id"  ng-model="device.technician_id" required>
 															<option value="">Select</option>
 														</select>
@@ -85,7 +85,7 @@
 												
 												<div class="row">
 													<div class="col-md-12">
-														<label for="">Doors</label><br/><!--doorList-->
+														<label for="">Doors <span class="text-danger">*</span></label><br/><!--doorList-->
 														<select ng-model="device.door_id" multiple chosen="{width: '100%'}" ng-options="item.door_id as item.door_name for item in doorList">
 														</select>
 													</div>
@@ -203,7 +203,7 @@
 							<div ng-class="class" ng-cloak>
 								<div class="glview" ng-init="deviceInit()">
 									<md-content>			
-										<md-card ng-repeat="device in data | limitTo:totalDisplayed">
+										<md-card ng-repeat="device in data | limitTo:totalDisplayed track by $index">
 											<span class="moreitemsondevice">
 												<a ui-sref="app.admin.device.service-plan"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
 												<a ui-sref="app.admin.device.device-settings({device_id:device.device_id})"><i class="fa fa-cog" aria-hidden="true"></i></a>
