--- a/views/tmpl/admin/device/edit-dependent-device.html
+++ b/views/tmpl/admin/device/edit-dependent-device.html
@@ -57,23 +57,23 @@
 									<div class="modal-body">											
 										<div class="row">
 											<div class="form-group col-sm-6 col-md-6">
-												<label for="">Device Name</label>
+												<label for="">Device Name <span class="text-danger">*</span></label>
 												<input type="text" name="" id="" class="form-control" value="Reception Room 1">
 											</div>
 											<div class="form-group col-sm-6 col-md-6">
-												<label for="">Model Name</label>
+												<label for="">Model Name <span class="text-danger">*</span></label>
 												<input type="text" name="" id="" class="form-control" value="Elika 76" disabled>
 											</div>
 										</div>
 										<div class="row">
 											<div class="form-group col-sm-6 col-md-6">
-												<label for="">Serial Number</label>
+												<label for="">Serial Number <span class="text-danger">*</span></label>
 												<input type="text" name="" id="" class="form-control" value="eliak46010192016s" disabled>
 											</div>
 											<div class="col-sm-6 col-md-6" ng-controller="DependentbtnCtrl">
 												<div class="row">
 													<div class="form-group col-sm-6 col-md-6 pr-0">
-														<label for="">Device Type</label><br/>
+														<label for="">Device Type <span class="text-danger">*</span></label><br/>
 														<div class="btn-group btnrounded">
 															<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Primary'">Primary</label>
 															<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Dependent'">Dependent</label>
@@ -99,7 +99,7 @@
 										</div>											
 										<div class="row">
 											<div class="form-group col-sm-6 col-md-6">
-												<label for="">Technician</label><br/>
+												<label for="">Technician <span class="text-danger">*</span></label><br/>
 												<select class="form-control">
 													<option>Arnold</option>
 													<option selected>Peter</option>
