--- a/views/tmpl/admin/device/edit-device.html
+++ b/views/tmpl/admin/device/edit-device.html
@@ -67,7 +67,7 @@
 									<div class="modal-body mt-5">											
 										<div class="row">
 											<div class="form-group col-sm-12 col-md-12">
-												<label for="">Device Name</label>
+												<label for="">Device Name <span class="text-danger">*</span></label>
 												<input type="text" name="device_name" id="" ng-model="editDevice.device_name" class="form-control" placeholder="" required>
 											</div>
 											<!---<div class="form-group col-sm-6 col-md-6">
@@ -79,17 +79,17 @@
 										</div>
 										<div class="row">
 											<div class="form-group col-sm-6 col-md-6">
-												<label for="">Serial Number</label>
+												<label for="">Serial Number <span class="text-danger">*</span></label>
 												<input type="text" name="serial_no" id="" ng-model="editDevice.device_serial_no" class="form-control" disabled placeholder="" required>
 											</div>
 											<div class="form-group col-sm-6 col-md-6">
-												<label for="">Registration Code</label>
+												<label for="">Registration Code <span class="text-danger">*</span></label>
 												<input name="registration_code" ng-model="editDevice.device_registration_code" class="form-control" disabled required />
 											</div>
 										</div>
 										<div class="row">
 											<div class="form-group col-sm-6 col-md-6">
-												<label for="">Facility</label>
+												<label for="">Facility <span class="text-danger">*</span></label>
 												<select disabled type="text" name="facility_id" id="" ng-model="editDevice.device_facility_id" ng-options="item.facility_id as item.facility_name for item in facilityList" class="form-control" placeholder="" required>
 													<option value="">Select</option>
 												</select>
@@ -99,7 +99,7 @@
 												
 												
 													<div class="form-group col-sm-6 col-md-6 pr-0">
-														<label for="">Device Type</label><br/>
+														<label for="">Device Type <span class="text-danger">*</span></label><br/>
 														<div disabled class="btn-group btnrounded" ng-init="editDevice.device_type='slave'">
 															<label class="btn btn-default" ng-model="editDevice.device_type" uib-btn-radio="'master'">Primary</label>
 															<label class="btn btn-default" ng-model="editDevice.device_type" uib-btn-radio="'slave'">Dependent</label>
@@ -118,13 +118,13 @@
 										</div>
 										<div class="row">
 											<div class="form-group col-sm-6 col-md-6">
-												<label for="">Doors</label><br/><!--doorList-->
+												<label for="">Doors <span class="text-danger">*</span></label><br/><!--doorList-->
 												<select ng-model="editDevice.door_id" multiple chosen="{width: '100%'}" disabled ng-options="item.door_id as item.door_name for item in doorList">
 												</select>
 											</div>
 										
 											<div class="form-group col-sm-6 col-md-6" >
-												<label for="">Technician</label><br/>
+												<label for="">Technician <span class="text-danger">*</span></label><br/>
 												
 												<select class="form-control" name="technician_id" ng-options="item.technician_id as item.technician_name for item in technicianList"  ng-model="editDevice.technician_id" required>
 													<option value="">Select</option>
