--- a/views/tmpl/admin/door/doors.html
+++ b/views/tmpl/admin/door/doors.html
@@ -36,11 +36,11 @@
 											<div class="modal-body">	
 												<div class="row">
 													<div class="form-group col-sm-6 col-md-6 first">
-														<label for="">Name</label>
+														<label for="">Name <span class="text-danger">*</span></label>
 														<input type="text" name="" id="" class="form-control" ng-model="door.name" placeholder="" required>
 													</div>
 													<div class="form-group col-sm-6 col-md-6 last">
-														<label for="">Facility</label><br/>
+														<label for="">Facility <span class="text-danger">*</span></label><br/>
 														<select class="form-control" ng-model="door.facility_id" ng-init="door.facility_id = facilityId" ng-options="item.facility_id as item.facility_name for item in facilityList" required>
 															<option value="">Select</option>
 														</select>
@@ -48,7 +48,7 @@
 												</div>
 												<div class="row">
 													<div class="form-group col-sm-6 col-md-6 first">
-														<label for="">Door Status</label><br/>
+														<label for="">Door Status <span class="text-danger">*</span></label><br/>
 														<div class="btn-group btnrounded" ng-init="door.status = 1">
 															<label class="btn btn-default" ng-model="door.status" uib-btn-radio="1">Active</label>
 															<label class="btn btn-default" ng-model="door.status" uib-btn-radio="0">Inactive</label>
@@ -152,8 +152,8 @@
 							</div>
 							<div ng-class="class" ng-cloak>
 								<div class="glview">
-									<md-content>			
-										<md-card ng-repeat="door in adoors | limitTo:totalDisplayed | filter:text | filter:title | filter:status | orderBy:myOrderBy">
+									<md-content>
+										<md-card ng-repeat="door in adoors | limitTo:totalDisplayed | filter:text | filter:title | filter:status | orderBy:myOrderBy track by $index">
 											<md-card-content>
 												<h2 class="md-title mt-40">{{ door.door_name }}</h2>
 												<p class="mb-20">{{ door.status == '1' ? 'Active' : 'Inactive' }}</p>
