--- a/views/tmpl/admin/door/view-doors.html
+++ b/views/tmpl/admin/door/view-doors.html
@@ -98,26 +98,26 @@
 											<div class="row">
 												<div class="col-md-6 first">
 													<div class="form-group">
-														<label for="">Name</label>
+														<label for="">Name <span class="text-danger">*</span></label>
 														<input type="text" name="door_name" id="" class="form-control mb-10" placeholder="" ng-model="doorData.door_name" required>
 													</div>
 												</div>
 												<div class="col-md-6 last">
 													<div class="form-group">
-														<label for="">Facility</label><br/>
+														<label for="">Facility <span class="text-danger">*</span></label><br/>
 														<select class="form-control" ng-options="field as field.facility_name for field in facilityList track by field.facility_id" ng-model="doorData.facility" >
 														</select>
 													</div>
 												</div>
 											</div>
 											<div class="form-group">
-												<label for="">Description</label>
+												<label for="">Description <span class="text-danger">*</span></label>
 												<textarea name="" id="" class="form-control mb-10" placeholder="" ng-model="doorData.door_description"></textarea>
 											</div>
 											<div class="row">
 												<div class="col-md-6 first">
 													<div class="form-group">
-														<label for="">Device Type</label><br/>
+														<label for="">Device Type <span class="text-danger">*</span></label><br/>
 														<div class="btn-group btnrounded">
 															<label class="btn btn-default" ng-model="doorData.door_status" uib-btn-radio="1">Active</label>
 															<label class="btn btn-default" ng-model="doorData.door_status" uib-btn-radio="0">Inactive</label>
