--- a/views/tmpl/admin/facility/edit-facility.html
+++ b/views/tmpl/admin/facility/edit-facility.html
@@ -41,29 +41,7 @@
 							<a ui-sref="app.admin.facility.view-facility({facility_id:facility.facility_id})" class="btn btn-rounded-20 btn-sm bg-slategray dk">View Facility</a>
 							<button ng-click="showConfirm($event,facility.facility_id)" class="btn btn-rounded-20 btn-sm bg-danger ml-5">Delete facility</button>
 						</div>
-					</div> 
-					<!--<div class="tile-body text-center p-0"> 
-						<ul class="list-inline tbox m-0">
-							<li class="tcol bg-blue dker p-10">
-								<a ui-sref="app.admin.device.devices">
-									<h2 class="m-0">{{dashboardData.primary_device}}</h2>
-									<span class="text-transparent-white">Devices</span>
-								</a>
-							</li>
-							<li class="tcol bg-blue dk p-10">
-								<a ui-sref="app.admin.user.users">
-									<h2 class="m-0">{{dashboardData.user}}</h2>
-									<span class="text-transparent-white">Users</span>
-								</a>
-							</li>
-							<li class="tcol bg-blue bg p-10">
-								<a ui-sref="app.admin.door.doors">
-									<h2 class="m-0">{{dashboardData.door}}</h2>
-									<span class="text-transparent-white">Doors</span>
-								</a>
-							</li>
-						</ul>
-					</div>  -->
+					</div>
 				</section>
 			</div>
 			
@@ -79,17 +57,17 @@
 									<div class="modal-body mt-5">
 										<div class="row">
 											<div class="form-group col-sm-6 col-md-6">
-												<label for="">Facility Name</label>
+												<label for="">Facility Name <span class="text-danger">*</span></label>
 												<input type="text" maxlength="30" name="facility_name" id="" class="form-control" ng-model="facility.facility_name" required>
 											</div>
 											<div class="form-group col-sm-6 col-md-6">
-												<label for="">Facility Location</label>
+												<label for="">Facility Location <span class="text-danger">*</span></label>
 												<input type="text" maxlength="30" name="facility_location" id="" class="form-control" ng-model="facility.facility_location" required>
 											</div>
 										</div>
 										<div class="row">
 											<div class="form-group col-sm-6 col-md-6">
-												<label for="">Time Zone </label>
+												<label for="">Time Zone <span class="text-danger">*</span></label>
 												<!-- <input type="text" class="form-control" ng-model="facility.facility_timezone"> -->
 												<select class="form-control" ng-model="facility.facility_timezone">
 													<option>USA (Alaska)</option>
@@ -104,12 +82,12 @@
 												</select>
 											</div>
 											<div class="form-group col-sm-6 col-md-6">
-												<label for="">Zip Code</label>
+												<label for="">Zip Code <span class="text-danger">*</span></label>
 												<input type="text" name="zip" maxlength="6" ng-keypress="allowNumberOnly($event);" id="zip" class="form-control" ng-model="facility.facility_zipcode" placeholder="10001" required>
 											</div>
 										</div>
 										<div class="form-group">
-											<label for="">Status</label><br/>
+											<label for="">Status <span class="text-danger">*</span></label><br/>
 											<div class="btn-group btnrounded">
 												<label class="btn btn-default" ng-model="facility.facility_status" uib-btn-radio="1">Active</label>
 												<label class="btn btn-default" ng-model="facility.facility_status" uib-btn-radio="0">Inactive</label>
