--- a/views/tmpl/admin/facility/facility-details.html
+++ b/views/tmpl/admin/facility/facility-details.html
@@ -126,19 +126,19 @@
 																		<div class="row overflow">
 																			<div class="col-md-6 first">
 																				<div class="form-group">
-																					<label for="">Device Name</label>
+																					<label for="">Device Name <span class="text-danger">*</span></label>
 																					<input type="text" name="" id="" class="form-control mb-10" placeholder="">
 																				</div>
 																			</div>
 																			<div class="col-md-6 last">
 																				<div class="form-group">
-																					<label for="">Serial Number</label>
+																					<label for="">Serial Number <span class="text-danger">*</span></label>
 																					<input type="text" name="" id="" class="form-control mb-10" placeholder="">
 																				</div>
 																			</div>
 																		</div>
 																		<div class="form-group" ng-controller="PrimarybtnCtrl">
-																			<label for="">Device Type</label><br/>
+																			<label for="">Device Type <span class="text-danger">*</span></label><br/>
 																			<div class="btn-group btnrounded">
 																				<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Primary'">Primary</label>
 																				<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Dependent'">Dependent</label>
@@ -161,7 +161,7 @@
 																		<div class="row">
 																			<div class="col-md-6 first">
 																				<div class="form-group">
-																					<label for="">Technician</label><br/>
+																					<label for="">Technician <span class="text-danger">*</span></label><br/>
 																					<select class="form-control">
 																						<option>Arnold</option>
 																						<option>Peter</option>
@@ -176,7 +176,7 @@
 																			</div>
 																			<div class="col-md-6 last">
 																				<div class="form-group">
-																					<label for="">Doors</label><br/>
+																					<label for="">Doors <span class="text-danger">*</span></label><br/>
 																					<select class="form-control">
 																						<option>Main Gate Front</option>
 																						<option>Main Gate Back</option>
