--- a/views/tmpl/admin/schedule/edit-schedule-groups.html
+++ b/views/tmpl/admin/schedule/edit-schedule-groups.html
@@ -590,26 +590,26 @@
 								</div>
 
 								<div class="modal-body col-md-5" ng-controller="ModalDemoCtrl"><!-- controller="ModalDemoCtrl" -->	
-									<form ng-submit="submitEditSchedule($parent.schedule)">
+									<form ng-validate="validationOptions" name="edit_schedule" ng-submit="submitEditSchedule($parent.schedule,edit_schedule)">
 									<div class="account">
 										<!--<div class="row mt-10">{{schedule}}</div>-->
 										<div class="row mt-10">
 											<div class="col-sm-6 col-md-6 form-group">
-												<label for="">Schedule Name</label>
-												<input type="text" ng-model="$parent.schedule.schedule_name" name="" id="" class="form-control" required>
+												<label for="">Schedule Name <span class="text-danger">*</span></label>
+												<input type="text" ng-model="$parent.schedule.schedule_name" name="schedule_name" id="" class="form-control" required>
 											</div>
 											<div class="col-sm-6 col-md-6 form-group">
-												<label for="" >Facility</label>
-												<select class="form-control" ng-model="$parent.schedule.schedule_facility_id" ng-options="x.facility_id as x.facility_name for x in facilityList" required>
+												<label for="" >Facility <span class="text-danger">*</span></label>
+												<select class="form-control" name="facility" ng-model="$parent.schedule.schedule_facility_id" ng-options="x.facility_id as x.facility_name for x in facilityList" required>
 													<option value="">Select</option>
 												</select>
 											</div>
 										</div>
 										<div class="row">
 											<div class="col-sm-6 col-md-6 form-group" ng-controller="DatepickerDemoCtrl">
-												<label for="">Start Date</label>
+												<label for="">Start Date <span class="text-danger">*</span></label>
 												<div class="input-group">
-													<input type="text" class="form-control" uib-datepicker-popup="{{format}}" ng-model="$parent.$parent.schedule.selected_schedule_start_date" min-date="$parent.minDate" is-open="opened" datepicker-options="dateOptions" close-text="Close" onkeypress="return false;"/>
+													<input type="text" name="start_date" class="form-control" uib-datepicker-popup="{{format}}" ng-model="$parent.$parent.schedule.selected_schedule_start_date" min-date="$parent.minDate" is-open="opened" datepicker-options="dateOptions" close-text="Close" onkeypress="return false;"/>
 													<span class="input-group-btn">
 														<button type="button" class="btn btn-default" ng-click="open($event)" style="padding: 8px 14px;"><i class="glyphicon glyphicon-calendar"></i></button>
 													</span>
@@ -621,12 +621,12 @@
 											<div class="col-sm-12 col-md-6">
 												<div class="row">
 													<div class="col-sm-6 col-md-6 form-group">
-														<label for="">Start Time</label>
+														<label for="">Start Time </label>
 														<input type="text" name="" ng-model="$parent.schedule.schedule_start_time" disabled id="" class="form-control">
 														
 													</div>
 													<div class="col-sm-6 col-md-6 form-group">
-														<label for="">End Time</label>
+														<label for="">End Time </label>
 														<input type="text" name="" ng-model="$parent.schedule.schedule_end_time" disabled id="" class="form-control">
 														
 													</div>
@@ -764,7 +764,7 @@
 																									
 										<div class="row" ng-init="schedule.schedule_status=1">
 											<div class="form-group col-sm-12 col-md-6">
-												<label for="">Status</label><br/>
+												<label for="">Status <span class="text-danger">*</span></label><br/>
 												<div class="btn-group btnrounded">
 													<label class="btn btn-default" ng-model="$parent.schedule.schedule_status" uib-btn-radio="1">Active</label>
 													<label class="btn btn-default" ng-model="$parent.schedule.schedule_status" uib-btn-radio="0">Inactive</label>
