--- a/views/tmpl/admin/user/user-groups.html
+++ b/views/tmpl/admin/user/user-groups.html
@@ -107,11 +107,11 @@
 															<div class="p-15">
 																<div class="row">
 																	<div class="form-group col-sm-12 col-md-12">
-																		<label for="">Group Name</label>
+																		<label for="">Group Name <span class="text-danger">*</span></label>
 																		<input type="text" maxlength="20" name="group_name" id="group_name" ng-model="userGroup.usergroup_name" class="form-control" placeholder="" required>
 																	</div>
 																	<div class="form-group col-sm-12 col-md-12">
-																		<label for="">Facility</label><br/>
+																		<label for="">Facility <span class="text-danger">*</span></label><br/>
 																		<select class="form-control" ng-model="userGroup.facility_id" ng-options="item.facility_id as item.facility_name for item in facilityList">
 																			<option value="">Select</option>
 																		</select>
@@ -247,7 +247,7 @@
 								<div class="glview">
 									<md-content>			
 										<!-- <md-card ng-repeat="user in usergroups | filter:text | filter:title | filter:facility | orderBy:myOrderBy"> -->
-										<md-card ng-repeat="user in usergroups">
+										<md-card ng-repeat="user in usergroups track by $index">
 											<!--img ng-src="{{imagePath}}/usergroups/{{user.imagename}}.jpg" class="md-card-image img100percent" alt="Washed Out"-->
 											<md-card-content>
 												<h2 class="md-title">{{ user.usergroup_name }}</h2>	
@@ -289,7 +289,7 @@
 																<md-tab label="Door Schedule" ng-click="listDoorSchedule(usergroupedit.usergroup_id, usergroupedit.facility_id)">
 																<md-content>
 																	<div class="tile-body p-15">
-																		<span style="color: green;">{{user_group_success}}</span>
+																		
 																		<table class="table table-bordered">
 																			<thead>
 																				<tr>
