--- a/views/tmpl/admin/user/user-profile.html
+++ b/views/tmpl/admin/user/user-profile.html
@@ -225,17 +225,17 @@
 										<div class="modal-body">
 											<div class="form-group row">
 												<div class="col-sm-6">
-													<label for="first-name">First Name</label>
+													<label for="first-name">First Name <span class="text-danger">*</span></label>
 													<input type="text" class="form-control" id="first-name" ng-model="editUser.first_name" ng-value="userData.user_first_name" name="first-name" required>
 												</div>
 												<div class="col-sm-6">
-													<label for="last-name">Last Name</label>
+													<label for="last-name">Last Name <span class="text-danger">*</span></label>
 													<input type="text" class="form-control" id="last-name" ng-model="editUser.last_name" ng-value="userData.user_last_name" name="last-name" required>
 												</div>
 											</div>
 											<div class="form-group row">										
 												<div class="col-sm-6">
-													<label for="email">E-mail Address</label>
+													<label for="email">E-mail Address <span class="text-danger">*</span></label>
 													<input type="email" class="form-control" id="email" ng-model="editUser.email" ng-value="userData.user_email" readonly>
 												</div>
 												<div class="col-sm-6 editprofile">
@@ -248,17 +248,17 @@
 											</div>										
 											<div class="form-group row">
 												<div class="col-sm-6">
-													<label for="first-name">Phone Number</label>
+													<label for="first-name">Phone Number <span class="text-danger">*</span></label>
 													<input type="number" class="form-control" ng-keypress="onlyNumber($event)" id="user_phone_no" ng-model="editUser.user_phone_no">
 												</div>
 												<div class="col-sm-6">
-													<label for="address1">Address</label>
+													<label for="address1">Address <span class="text-danger">*</span></label>
 													<input type="text" class="form-control" id="address1" ng-model="editUser.address" ng-value="userData.user_address" name="address1" required>
 												</div>
 											</div>										
 											<div class="form-group row">
 												<div class="col-sm-12">
-													<label for="bio">Description</label>
+													<label for="bio">Description <span class="text-danger">*</span></label>
 													<textarea class="form-control" id="bio" ng-model="editUser.description" style="height:125px;" name="bio" required>{{userData.description}}</textarea>
 												</div>
 											</div>
@@ -266,7 +266,7 @@
 												<div class="col-md-6">
 													<div class="row">
 														<div class="col-md-5 pr-0">
-															<label for="">Status</label><br/>
+															<label for="">Status <span class="text-danger">*</span></label><br/>
 															<div class="btn-group btnrounded">
 																<label class="btn btn-default" ng-model="editUser.user_status" uib-btn-radio="1">Active</label>
 																<label class="btn btn-default" ng-model="editUser.user_status" uib-btn-radio="0">Inactive</label>
@@ -274,7 +274,7 @@
 														</div>
 														<div class="col-md-7" ng-hide="editUser.user_status==0">
 															<div ng-controller="DatepickerDemoCtrl">
-																<label for="">Expiration Date</label>
+																<label for="">Expiration Date <span class="text-danger">*</span></label>
 																<div class="input-group">
 																	<input type="text" class="form-control" uib-datepicker-popup="{{format}}" ng-model="editUser.expiration_date" min-date="mindate" is-open="opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" ng-value="editUser.expiration_date"/>
 																	<span class="input-group-btn">
